RESOLVED FIXED142471
[Win] WTF::WorkQueue does not balance ref/deref properly
https://bugs.webkit.org/show_bug.cgi?id=142471
Summary [Win] WTF::WorkQueue does not balance ref/deref properly
Brent Fulgham
Reported 2015-03-08 20:23:52 PDT
I overlooked a 'deref' in the WTF::WorkQueue implementation. I should have had a test to avoid this! Let's fix both problems.
Attachments
Patch (4.95 KB, patch)
2015-03-08 20:36 PDT, Brent Fulgham
koivisto: review+
Brent Fulgham
Comment 1 2015-03-08 20:36:25 PDT
Brent Fulgham
Comment 2 2015-03-08 21:16:06 PDT
Note You need to log in before you can comment on or make changes to this bug.