[Win] WTF::WorkQueue does not balance ref/deref properly https://bugs.webkit.org/show_bug.cgi?id=142471

Reviewed by Antti Koivisto.

Source/WTF:

Make sure we deref the count when we execute a function in the
WorkQueue.

* wtf/win/WorkQueueWin.cpp:
(WTF::WorkQueue::performWorkOnRegisteredWorkThread):

Tools:

* TestWebKitAPI/Tests/WTF/WorkQueue.cpp:
(TestWebKitAPI::TEST): Check that the refcount is correct.


Canonical link: https://commits.webkit.org/160515@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181257 268f45cc-cd09-0410-ab3c-d52691b4dbfc